# raytracer

./: .gitignore  CMakeLists.txt  raytracer1a.cpp  readme.txt
files/: example5.txt  example7.txt  input.txt  ray_input_hw1da.txt  ray_input_hw1db.txt  ray_input_hw1dc.txt  teacup.txt
hw1a.jackson.ristau/: CMakeLists.txt  raytracer1a.cpp  readme.txt
hw1a.jackson.ristau/math/: point.h  sphere.h  vector.cpp
math/: point.cpp  ray.cpp  ray.h  sphere.cpp  sphere.h  vector.h  vector3.cpp  vector3.h
src/: color.cpp  color.h  directionallight.h  light.cpp  light.h  material.cpp  material.h  point.cpp  point.h  pointlight.h  ray.cpp  ray.h  raytracer.cpp  raytracer1a.cpp  scene.cpp  scene.h  scratch.cpp  sphere.cpp  sphere.h  texture.cpp  texture.h  vector.cpp  vector.h
src/math/: sphere.cpp  vector.h
textures/: bump.ppm  umn.ppm
